deploy/broker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: broker-app
  namespace: azure-workloads
  labels:
    app: broker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: broker
  template:
    metadata:
      labels:
        app: broker
        azure.workload.identity/use: "true"
    spec:
      serviceAccountName: workload-identity-sa
      containers:
        - name: broker-app
          image: datasynchroacr.azurecr.io/broker-app:latest
          ports:
            - containerPort: 5000
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: broker-service
  namespace: azure-workloads
  labels:
    app: broker

spec:
  selector:
    app: broker
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
