deploy/webapi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-api-command
  namespace: azure-resources
  labels:
    app: webapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapi
  template:
    metadata:
      labels:
        app: webapi
        azure.workload.identity/use: "true"
    spec:
      serviceAccountName: workload-identity-sa
      containers:
        - name: web-api-command
          image: datasynchroacr.azurecr.io/web-api-command:latest
          ports:
            - containerPort: 5000
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: webapi-service
  namespace: azure-resources
  labels:
    app: webapi

spec:
  selector:
    app: webapi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
