deploy/webapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-frontend-app
  namespace: azure-resources
  labels:
    app: webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
        - name: web-frontend-app
          image: datasynchroacr.azurecr.io/web-app:latest
          ports:
            - containerPort: 5000
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: webapp-service
  namespace: azure-resources
  labels:
    app: webapp

spec:
  selector:
    app: webapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
